# quiz-bot

./: README.md  database.py  main.py  pyproject.toml  verbs.py
