[project]
name = "quiz-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "miralex",email = "mironositsky@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot",

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
